--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header>
             <nav>
         <h1 id="Name">Bruna Louise Pereira Luz</h1>
-        <a href="https://scholar.google.com.br/citations?user=A7y2s4YAAAAJ&hl=en" target="_blank"> <img class="photo" src="myimage.jpg" alt="Bruna Luz" width="150" height="200"/></a>
+        <a href="https://scholar.google.com.br/citations?user=A7y2s4YAAAAJ&hl=en" target="_blank"> <img class="photo" src="myimage.JPG" alt="Bruna Luz" width="150" height="200"/></a>
         </nav>
         </header>
         <style>
