--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header>
             <nav>
         <h1 id="Name">Bruna Louise Pereira Luz</h1>
-        <a href="https://scholar.google.com.br/citations?user=A7y2s4YAAAAJ&hl=en" target="_blank"> <img class="photo" src="myimage.JPG" alt="Bruna Luz" width="150" height="200"/></a>
+        <a href="https://scholar.google.com.br/citations?user=A7y2s4YAAAAJ&hl=en" target="_blank"> <img class="photo" src="myimage.jpg" alt="Bruna Luz" width="150" height="200"/></a>
         </nav>
         </header>
         <style>
@@ -94,8 +94,8 @@
             </tr>
         </table>
         </div>
-        <h3>Coding Examples</h3>
-         <a href="quiz.html" target="_blank">Take the Portfolio Quiz!</a>
+        <h3  class="heading">Coding Examples</h3>
+         <a href="quiz2.html" target="_blank">Take the Portfolio Quiz!</a>
          <!--Contact Section-->
         <div id="contactsection">
         <h2 class="heading" id="contact">Contact</h2>
@@ -103,10 +103,10 @@
         <br>
         </div>
         <br>
-        <form id="contactform" action="https://formspree.io/f/xlekqbke" method="POST">
+        <form>
             <label for="Name">*Name:</label>
             <br>
-            <input type="text" name="Name-text-field" id="Name" required>
+            <input type="text" name="Name" id="Name-text-field" required>
             <br>
             <br>
             <label for="Email">*Email</label>
@@ -119,7 +119,7 @@
             <input type="tel" name="Mobile" id="Mobile" pattern="[0-9] {10,16}">
             <br>
             <br>
-            <label for="Message">*Leave your message below:*=</label>
+            <label for="Message">*Leave your message below:*</label>
             <br>
             <textarea id="Message" name="Message" rows="5" cols="30" required>
             </textarea>
