--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <input type="tel" name="Mobile" id="Mobile" pattern="[0-9] {10,16}">
             <br>
             <br>
-            <label for="Message">*Leave your message below:*</label>
+            <label for="Message">*Leave your message below:</label>
             <br>
             <textarea id="Message" name="Message" rows="5" cols="30" required>
             </textarea>
